tests/baselines/reference/checkIndexConstraintOfJavascriptClassExpression.errors.txt
weird.js(1,1): error TS2552: Cannot find name 'someFunction'. Did you mean 'Function'?
weird.js(1,23): error TS7006: Parameter 'BaseClass' implicitly has an 'any' type.
weird.js(9,17): error TS7006: Parameter 'error' implicitly has an 'any' type.


==== weird.js (3 errors) ====
    someFunction(function(BaseClass) {
    ~~~~~~~~~~~~
!!! error TS2552: Cannot find name 'someFunction'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                          ~~~~~~~~~
!!! error TS7006: Parameter 'BaseClass' implicitly has an 'any' type.
        'use strict';
        const DEFAULT_MESSAGE = "nop!";
        class Hello extends BaseClass {
            constructor() {
                super();
                this.foo = "bar";
            }
            _render(error) {
                    ~~~~~
!!! error TS7006: Parameter 'error' implicitly has an 'any' type.
                const message = error.message || DEFAULT_MESSAGE;
            }
        }
    });
    